--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,21 @@
+/* reset button style */
+#resetButton {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 22px;
+}
+
+.container {
+    margin: auto;
+    width: 500px;
+    border: 3px solid green;
+    padding: 10px;
+}
 
 /* grid */
 #board {
@@ -9,7 +27,14 @@
 }
 
 /* empty cells */
-div {
+/*div {
+    background-color: rgb(231, 223, 236);
+    border: 0px solid black;
+    height: 5px;
+    width: 5px;
+}*/
+
+.cell {
     background-color: rgb(231, 223, 236);
     border: 0px solid black;
     height: 5px;
